--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                     <h1 class="m-0 display-5 text-uppercase"><span class="text-primary">News</span>Affair</h1>
                 </a>
             </div>
-            <div class="col-lg-8 text-center text-lg-right">
+            <!-- <div class="col-lg-8 text-center text-lg-right">
                 <img class="img-fluid" src="img/ads-700x70.jpg" alt="">
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Topbar End -->
@@ -531,9 +531,9 @@
                         </div>
                     </div>
                     
-                    <div class="mb-3 pb-3">
+                    <!-- <div class="mb-3 pb-3">
                         <a href=""><img class="img-fluid w-100" src="img/ads-700x70.jpg" alt=""></a>
-                    </div>
+                    </div> -->
                     
                     <div class="row">
                         <div class="col-12">
@@ -830,10 +830,10 @@
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5">
         <p class="m-0 text-center">
-            &copy; <a class="font-weight-bold" href="#">Your Site Name</a>. All Rights Reserved. 
+            &copy; <a class="font-weight-bold" href="#">NEWSAFFAIR</a>. All Rights Reserved. 
 			
 			<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-			Designed by <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+			Designed by <a class="font-weight-bold" href="">MarvelDezign</a>
         </p>
     </div>
     <!-- Footer End -->
