--- a/single.html
+++ b/single.html
@@ -45,12 +45,12 @@
         <div class="row align-items-center py-2 px-lg-5">
             <div class="col-lg-4">
                 <a href="" class="navbar-brand d-none d-lg-block">
-                    <h1 class="m-0 display-5 text-uppercase"><span class="text-primary">News</span>Room</h1>
+                    <h1 class="m-0 display-5 text-uppercase"><span class="text-primary">News</span>Affair</h1>
                 </a>
             </div>
-            <div class="col-lg-8 text-center text-lg-right">
+            <!-- <div class="col-lg-8 text-center text-lg-right">
                 <img class="img-fluid" src="img/ads-700x70.jpg" alt="">
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Topbar End -->
@@ -166,7 +166,7 @@
                     <!-- News Detail End -->
 
                     <!-- Comment List Start -->
-                    <div class="bg-light mb-3" style="padding: 30px;">
+                    <!-- <div class="bg-light mb-3" style="padding: 30px;">
                         <h3 class="mb-4">3 Comments</h3>
                         <div class="media mb-4">
                             <img src="img/user.jpg" alt="Image" class="img-fluid mr-3 mt-1" style="width: 45px;">
@@ -202,11 +202,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Comment List End -->
 
                     <!-- Comment Form Start -->
-                    <div class="bg-light mb-3" style="padding: 30px;">
+                    <!-- <div class="bg-light mb-3" style="padding: 30px;">
                         <h3 class="mb-4">Leave a comment</h3>
                         <form>
                             <div class="form-group">
@@ -231,7 +231,7 @@
                                     class="btn btn-primary font-weight-semi-bold py-2 px-3">
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                     <!-- Comment Form End -->
                 </div>
 
@@ -389,7 +389,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="mb-2 mt-n2 display-5 text-uppercase"><span class="text-primary">News</span>Room</h1>
+                    <h1 class="mb-2 mt-n2 display-5 text-uppercase"><span class="text-primary">News</span>Affair</h1>
                 </a>
                 <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
                 <div class="d-flex justify-content-start mt-4">
@@ -448,10 +448,10 @@
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5">
         <p class="m-0 text-center">
-            &copy; <a class="font-weight-bold" href="#">Your Site Name</a>. All Rights Reserved. 
+            &copy; <a class="font-weight-bold" href="#">NEWSAFFAIR</a>. All Rights Reserved. 
 			
 			<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-			Designed by <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+			Designed by <a class="font-weight-bold" href="">MarvelDezign</a>
         </p>
     </div>
     <!-- Footer End -->
