--- a/single.html
+++ b/single.html
@@ -31,7 +31,7 @@
         <div class="row align-items-center bg-light px-lg-5">
             <div class="col-12 col-md-8">
                 <div class="d-flex justify-content-between">
-                    <div class="bg-primary text-white text-center py-2" style="width: 100px;">Tranding</div>
+                    <div class="bg-primary text-white text-center py-2" style="width: 100px;">Trending</div>
                     <div class="owl-carousel owl-carousel-1 tranding-carousel position-relative d-inline-flex align-items-center ml-3" style="width: calc(100% - 100px); padding-left: 90px;">
                         <div class="text-truncate"><a class="text-secondary" href="">Labore sit justo amet eos sed, et sanctus dolor diam eos</a></div>
                         <div class="text-truncate"><a class="text-secondary" href="">Gubergren elitr amet eirmod et lorem diam elitr, ut est erat Gubergren elitr amet eirmod et lorem diam elitr, ut est erat</a></div>
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="col-md-4 text-right d-none d-md-block">
-                Monday, January 01, 2045
+                Friday, August 12, 2022
             </div>
         </div>
         <div class="row align-items-center py-2 px-lg-5">
@@ -295,7 +295,7 @@
                     <!-- Popular News Start -->
                     <div class="pb-3">
                         <div class="bg-light py-2 px-4 mb-3">
-                            <h3 class="m-0">Tranding</h3>
+                            <h3 class="m-0">Trending</h3>
                         </div>
                         <div class="d-flex mb-3">
                             <img src="img/news-100x100-1.jpg" style="width: 100px; height: 100px; object-fit: cover;">
